# gh3ml

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Core.hpp  GH3ML.hpp  Log.hpp  LogSource.hpp
include/Descriptors/: ArgumentDescriptor.hpp  FunctionDescriptor.hpp
include/GH3ML/: CFuncManager.hpp  Config.hpp  Core.hpp  Hook.hpp  Log.hpp  LogSource.hpp  ModInfo.hpp
libGH3/: CMakeLists.txt
libGH3/include/GH3/: Addresses.hpp  CFunc.hpp  CRC.hpp  CRC32.hpp  Common.hpp  DirectX.hpp  EngineParams.hpp  Global.hpp  HashMap.hpp  HashMapNode.hpp  Keys.hpp  Misc.hpp  Node.hpp  Qb.hpp  Record.hpp  SingletonPtr.hpp
libGH3/include/GH3/Ass/: CAssMan.hpp
libGH3/include/GH3/Front/: CScreenElement.hpp
libGH3/include/GH3/Gfx/: CDofPFXPropsState.hpp  CDofPoissonFXPropsState.hpp  CScreenFXManager.hpp  CScreenFXPropsState.hpp  Camera.hpp
libGH3/include/GH3/Image/: RGBA.hpp
libGH3/include/GH3/Lst/: HashItem.hpp  HashTable.hpp  Head.hpp  Node.hpp  StringHashTable.hpp
libGH3/include/GH3/Mdl/: Manager.hpp  Module.hpp
libGH3/include/GH3/Mem/: Allocator.hpp  CCompactPool.hpp  CPoolable.hpp  Heap.hpp  Region.hpp
libGH3/include/GH3/Mth/: Vector.hpp
libGH3/include/GH3/Nx/: CViewport.hpp  CXenonViewport.hpp
libGH3/include/GH3/NxXenon/: sSprite.hpp
libGH3/include/GH3/Qb/: CArray.hpp  CComponent.hpp  CScript.hpp  Qb.hpp  QbNodeFlags.hpp  QbScript.hpp  QbStruct.hpp  QbStructItem.hpp  QbValueType.hpp
libGH3/include/GH3/Script/: CArray.hpp  CComponent.hpp  CComponentType.hpp  CPair.hpp  CStruct.hpp  CSymbolTableEntry.hpp  CSymbolTableEntryType.hpp  ScriptCache.hpp  ScriptCommon.hpp  SymbolType.hpp
libGH3/include/GH3/Spt/: Access.hpp  Class.hpp  Singleton.hpp
libGH3/include/GH3/Tsk/: BaseTask.hpp  List.hpp  Task.hpp
libGH3/src/: main.cpp
libGH3/src/GH3/: Addresses.cpp  CFunc.cpp  CRC.cpp  CRC32.cpp
libGH3/src/GH3/Lst/: Node.cpp
libGH3/src/GH3/Mdl/: Manager.cpp
libGH3/src/GH3/Mem/: CCompactPool.cpp  CPoolable.cpp
libGH3/src/GH3/Qb/: QbStruct.cpp
libGH3/src/GH3/Script/: CComponentType.cpp  CStruct.cpp  CSymbolTableEntry.cpp  CSymbolTableEntryType.cpp  ScriptCommon.cpp
loader/: CMakeLists.txt
loader/include/Nylon/: CFuncManager.hpp  Checksum.hpp  CommandConsole.hpp  Config.hpp  Core.hpp  DefaultCFuncs.hpp  Flags.hpp  Hook.hpp  Log.hpp  LogSource.hpp  ModInfo.hpp  Profile.hpp  TimePoint.hpp  VersionInfo.hpp
loader/include/Nylon/Hooks/Gfx/: CScreenFXManagerHooks.hpp
loader/proxy/: CMakeLists.txt
loader/proxy/src/: ProxyLoader.cpp
loader/src/: CFuncManager.cpp  CommandConsole.cpp  Config.cpp  Core.cpp  Log.cpp  LogSource.cpp  Main.hpp  ModInfo.cpp  VersionInfo.cpp  main.cpp
loader/src/CFunc/: CFuncManager.cpp  DefaultCFuncs.cpp  DefaultCFuncs.hpp
loader/src/Hooks/: AspyrHooks.cpp  CEngineHooks.cpp  CFuncHooks.cpp  CFuncHooks.hpp  CMakeLists.txt  DefaultHooks.cpp  DirectXHooks.cpp  DirectXHooks.hpp  GuitarFuncs.cpp  Hook.cpp  Hooks.hpp
loader/src/Imgui/: ImGuiConsole.cpp  ImGuiConsole.hpp  Imgui.cpp  Imgui.hpp
loader/src/Logging/: Log.cpp  LogFile.cpp  LogFile.hpp  LogSource.cpp
loader/src/Nylon/: CMakeLists.txt  CommandConsole.cpp  Profile.cpp
loader/src/Nylon/Internal/: CMakeLists.txt  Main.hpp
loader/src/Nylon/Internal/Hooks/: CEngineHooks.cpp  CFuncHooks.cpp  CMakeLists.txt  DefaultHooks.cpp  DirectXHooks.cpp  GuitarFuncs.cpp  Hooks.hpp
loader/src/Nylon/Internal/Hooks/Gfx/: CScreenFXManager.cpp
loader/src/Nylon/Internal/Imgui/: CMakeLists.txt  ImGui.cpp  ImGui.hpp
src/ProxyLoader/: ProxyLoader.cpp
src/gh3ml/: CFuncManager.cpp  Config.cpp  Core.cpp  DefaultHooks.cpp  Hook.cpp  Log.cpp  LogSource.cpp  Main.hpp  ModInfo.cpp  main.cpp
src/gh3ml/Hooks/: DefaultHooks.cpp  DirectXHooks.cpp  DirectXHooks.hpp  Hook.cpp
src/gh3ml/Imgui/: Imgui.cpp  Imgui.hpp
